T769-0 Fix layout issue due to font size change

--- a/grails-app/assets/stylesheets/application/layout.less
+++ b/grails-app/assets/stylesheets/application/layout.less
@@ -1769,7 +1769,7 @@ body {
 }
 
 .fa-xl {
-  font-size: 1.666em;
+  font-size: 1.6em;
   line-height: .80em;
   vertical-align: -25%
 }
