--- a/grails-app/assets/stylesheets/application/select2.less
+++ b/grails-app/assets/stylesheets/application/select2.less
@@ -10,7 +10,7 @@
 }
 
 .select2-container .select2-choice {
-  height: 30px;
+  height: 31px;
   border-color: #D9D9D9;
   border-top-color: #C0C0C0;
   border-radius: 0;
